--- a/config_sample.ini
+++ b/config_sample.ini
@@ -46,7 +46,7 @@ API_SECRET = api_secret_here
 username = username_here
 password = password_here
 
-[L'été Metal]
+[Metal]
 API_KEY = api_key_here
 API_SECRET = api_secret_here
 username = username_here
