--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 
 [packages]
 e1839a8 = {editable = true,path = "."}
-fip-lastfm-mirror = {editable = true,path = "."}
+fip-mirror = {editable = true,path = "."}
 
 [requires]
 python_version = "3.7"
