--- a/config_sample.ini
+++ b/config_sample.ini
@@ -1,3 +1,14 @@
+[twitter]
+consumer_key = consumer_key_here
+secret_key = secret_key_here
+access_token = access_token_here
+access_token_secret = access_token_secret_here
+
+[mastodon]
+api_base_url = api_base_url_here
+login_email = login_email_here
+password = password_here
+
 [FIP]
 API_KEY = api_key_here
 API_SECRET = api_secret_here
@@ -51,4 +62,3 @@ API_KEY = api_key_here
 API_SECRET = api_secret_here
 username = username_here
 password = password_here
-
