Update config file.

--- a/config_sample.ini
+++ b/config_sample.ini
@@ -9,55 +9,55 @@ api_base_url = api_base_url_here
 login_email = login_email_here
 password = password_here
 
-[FIP]
+[lastfm-FIP]
 API_KEY = api_key_here
 API_SECRET = api_secret_here
 username = username_here
 password = password_here
 
-[Rock]
+[lastfm-Rock]
 API_KEY = api_key_here
 API_SECRET = api_secret_here
 username = username_here
 password = password_here
 
-[Jazz]
+[lastfm-Jazz]
 API_KEY = api_key_here
 API_SECRET = api_secret_here
 username = username_here
 password = password_here
 
-[Groove]
+[lastfm-Groove]
 API_KEY = api_key_here
 API_SECRET = api_secret_here
 username = username_here
 password = password_here
 
-[Monde]
+[lastfm-Monde]
 API_KEY = api_key_here
 API_SECRET = api_secret_here
 username = username_here
 password = password_here
 
-[Nouveautés]
+[lastfm-Nouveautés]
 API_KEY = api_key_here
 API_SECRET = api_secret_here
 username = username_here
 password = password_here
 
-[Reggae]
+[lastfm-Reggae]
 API_KEY = api_key_here
 API_SECRET = api_secret_here
 username = username_here
 password = password_here
 
-[Electro]
+[lastfm-Electro]
 API_KEY = api_key_here
 API_SECRET = api_secret_here
 username = username_here
 password = password_here
 
-[Metal]
+[lastfm-Metal]
 API_KEY = api_key_here
 API_SECRET = api_secret_here
 username = username_here
