--- a/config_sample.ini
+++ b/config_sample.ini
@@ -62,3 +62,9 @@ API_KEY = api_key_here
 API_SECRET = api_secret_here
 username = username_here
 password = password_here
+
+[lastfm-Pop]
+API_KEY = api_key_here
+API_SECRET = api_secret_here
+username = username_here
+password = password_here
